# sonarr-mcp

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  sonarr-mcp-server.py
