[project]
name = "sonarr-mcp-server"
version = "1.0.0"
description = "Model Context Protocol server for Sonarr TV series management"
authors = [
    {name = "MCP Developer", email = "dev@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "fastmcp>=2.0.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" = "https://github.com/yourusername/sonarr-mcp-server"
"Bug Tracker" = "https://github.com/yourusername/sonarr-mcp-server/issues" 